# sphinx-gherkinfile

./: .editorconfig  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yaml  ci.yml  release.yaml  release.yml
src/sphinx_gherkinfile/: __init__.py  directive.py  gherkin.py
tests/: conftest.py  test_autofeature.py  test_docstrings.py  test_german.py  test_repeated_steps.py
tests/roots/test-autofeature/: index.rst
tests/roots/test-docstrings/: docstrings.feature  index.rst
tests/roots/test-german/: conf.py  german.feature  index.rst
tests/roots/test-repeated-steps/: index.rst  repeated_steps.feature
tests/roots/test-search-paths/: conf.py  index.rst
tests/roots/test-search-paths/features/: parameter_module_changed.feature
